--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,18 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_chatop
 spring.datasource.username=root
 spring.datasource.password=root
 
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+#spring.security.user.name=Nicolas
+
+#spring.security.user.password=Nicolas
+
+
+# Désactive Swagger UI de l'API par défaut (Petstore)
+springdoc.swagger-ui.disable-swagger-default-url=true
