--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,15 @@
 			<scope>test</scope>
 		</dependency>
 		
+		
+		
+		 <dependency>
+		      <groupId>org.springframework.boot</groupId>
+		      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+  		</dependency>
+		
+		
 		<dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
