--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 
 # Désactive Swagger UI de l'API par défaut (Petstore)
 springdoc.swagger-ui.disable-swagger-default-url=true
+
+
+
+spring.web.resources.static-locations[0]=file:src/main/resources/static/
+spring.web.resources.static-locations[1]=classpath:/static/
